2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/flash/flash.c, shared/irq/irq_init.c: Add missing
	prototypes.
	* shared/showbats.c, shared/console/inch.c, shared/irq/irq_init.c,
	shared/pci/detect_raven_bridge.c, shared/startup/bspstart.c,
	shared/startup/zerobss.c, shared/vme/vmeconfig.c,
	startup/exit.c: Add missing prototypes.

2008-08-19	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/clock/clock.c: Fixed warnings.

2008-07-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/clock/clock.c: Update due to powerpc-utilty.h changes.

2008-07-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* mpc55xxevb: New BSP.

2008-07-14	Thomas Doefler <Thomas.Doerfler@embedded-brains.de>
	* haleakala: added new BSP

2008-07-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* ep1a/startup/bspstart.c, mvme3100/startup/bspstart.c,
	mvme5500/startup/bspstart.c, psim/startup/bspstart.c,
	shared/startup/bspstart.c: The usage of SPRG0 as changed.  It is now
	used to store the interrupt disable mask.  See bootcard.c and
	ppc_exc_initialize() for default initialization.

	Update to new exception initialization routine ppc_exc_initialize().
	The exception low level code has changed, see libcpu/powerpc/ChangeLog.

	* gen5200/startup/bspstart.c, mbx8xx/startup/bspstart.c,
	mpc8260ads/startup/bspstart.c, ss555/startup/bspstart.c,
	virtex/startup/bspstart.c: The usage of SPRG0 as changed.  It is now
	used to store the interrupt disable mask.  See bootcard.c for default
	initialization.

2008-07-10	Till Straumann <strauman@slac.stanford.edu>

	* shared/flash/spansionFlash.c: removed "m" memory
	operands.

2008-07-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/clock/clock.c: Alternative clock driver.  Uses exception handler
	directly.  Supports special variants for Book E and e300 cores.  For
	standard decrementer CPUs the new decrementer value is calculated with