@@ -1,3 +1,8 @@
+2008-08-28	Till Straumann <strauman@slac.stanford.edu>
+
+	* shared/vme/vme_universe.c: added implementation for
+	BSP_VMEResetBus().
+
 2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* shared/flash/flash.c, shared/irq/irq_init.c: Add missing
